src/test/deca/syntax/invalid/intermediaire2/elseif/05nobrace.deca
{
    if (3 < 2) {
        print("Trop petit !");
    } else if ( 2 > 1 ){
        print("Trop grand !");
    
}